# BIBLOS_v2

./: .coverage  .env.example  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROPERTY_TESTING_SUMMARY.md  QA_REPORT.md  README.md  SECURITY_AUDIT_REPORT.md  __main__.py  biblos.py  config.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  tmpclaude-e120-cwd
.claude/: settings.local.json
.github/workflows/: ci.yml
.hypothesis/: config.ini
.hypothesis/constants/: 001349eb45677c37  0036c3f9aeac6cb9  003f6aae6a76be36  004d14f79ddab2f1  004e722d2b39195a  005be612047aa41d  006b559781a41f7f  006d29edf1dcd5e3  008304d370631466  008b503a53f14b13  009f0116eab76fe1  009f7a1122aa4f57  00af7731471577ae  00bed06eaa00265d  00c6b2b0b473e045  00f0fc13c0899d3e  010258c38047fd64  0106953e2a3e6d3d  0111c1fb9c822453  0128603b5e7a94c2  013eb69867ecfdb2  0140297e352ccb6f  016021ee034ec5c4  01b21858bc84ad91  01b83e7acab11992  01ba85f6eebc85d8  01e5ecd9fe6b2c81  01f0a8720e152f49  0221ac1d32810d42  02361c7d2d1bf455  024c3ffaaf1296ea  0259594f63b2a1f6  025c876b6e0ab5a5  0272edf6d5a2f56f  02c9a85645440086  02cae4fc9c79cfc3  02faccbac4865dc4  02fef9ef34523d7e  031f85f1c11bb00b  032bb05e75ff8d56  (+3366 more)
.hypothesis/tmp/: tmp04axg2u9  tmp2y6oe26c  tmp8p03yi4o  (+3 more)
Plan-Upgrade/: SESSION_01_MUTUAL_TRANSFORMATION_METRIC.md  SESSION_02_THEOLOGICAL_CONSTRAINT_VALIDATOR.md  SESSION_03_OMNI_CONTEXTUAL_RESOLVER.md  SESSION_04_INTERVERSE_NECESSITY_CALCULATOR.md  SESSION_05_LXX_CHRISTOLOGICAL_EXTRACTOR.md  SESSION_06_HYPER_FRACTAL_TYPOLOGY_ENGINE.md  SESSION_07_PROPHETIC_NECESSITY_PROVER.md  SESSION_08_EVENT_SOURCING_MIGRATION.md  SESSION_09_NEO4J_GRAPH_FIRST_ARCHITECTURE.md  SESSION_10_VECTOR_DB_ENHANCEMENT.md  SESSION_11_PIPELINE_INTEGRATION.md  SESSION_12_TESTING_AND_FINAL_INTEGRATION.md
agents/: MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md  __init__.py  base.py  base_backup.py  base_refactored.py  base_v2.py  langgraph_orchestrator.py  orchestrator.py  registry.py
alembic/: alembic.ini  env.py
api/: __init__.py  main.py
cli/: __init__.py  lxx_commands.py  main.py
core/: __init__.py  async_utils.py  bootstrap.py  config_validator.py  errors.py  exports.py  factories.py  resilience.py  types.py  validation.py
data/: __init__.py  arrow_batch.py  covenant_arcs.json  dataset.py  loaders.py  polars_schemas.py  schemas.py  type_patterns.json
db/: __init__.py  command_handlers.py  commands.py  connection_pool.py  connection_pool_optimized.py  event_store.py  events.py  exports.py  graph_projection.py  interfaces.py  models.py  models_optimized.py  neo4j_algorithms.py  neo4j_client.py  neo4j_optimized.py  neo4j_schema.py  postgres.py  postgres_optimized.py  projections.py  qdrant_client.py
di/: __init__.py  container.py
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
docs/: ARCHITECTURE_REVIEW.md  DATABASE_OPTIMIZATION_REPORT.md  ML_OPTIMIZATION_REPORT.md  POLARS_MIGRATION_GUIDE.md
domain/: __init__.py  entities.py  infallibility.py  mediator.py  projections.py  specifications.py
evaluation/: __init__.py  framework.py  metrics.py  test_cases.py
integrations/: __init__.py  base.py  lxx_corpus.py  macula.py  text_fabric.py
ml/: __init__.py  batch_processor.py  cache.py  config.py
observability/: QUERIES.md  __init__.py  audit.py  instrumentation.py  logging.py  metrics.py  slo.py  tracing.py
pipeline/: __init__.py  base.py  batch_processor.py  context.py  event_bus.py  finalization.py  golden_record.py  intertextual.py  linguistic.py  orchestrator.py  query_interface.py  recovery.py  stream_consumer.py  stream_orchestrator.py  stream_phases.py  theological.py  unified_orchestrator.py  validation.py
scripts/: __init__.py  benchmark_data_plane.py  normalize_patristics.py  populate_data.py  populate_patristics.py  run_property_tests.py  run_stream_pipeline.py  verify_organism.py
seraph/: __init__.py  being.py  canons.py  corpus.py  golden_ring.py  indwelling.py  infallibility.py  inscribed_extraction.py  transcendence.py
tests/: __init__.py  conftest.py  test_integration_organism.py
(+136 files in other folders)
